--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,10 +35,15 @@ dependencies {
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    api 'com.theartofdev.edmodo:android-image-cropper:2.8+'
 
     // Face features
     implementation 'com.google.mlkit:face-detection:16.0.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    implementation 'com.github.dhaval2404:imagepicker:2.1'
+//    implementation 'com.github.dhaval2404:imagepicker-support:1.7.1'
+
 
     // Text features
     implementation 'com.google.android.gms:play-services-mlkit-text-recognition:16.0.0'
