--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.0'
+        classpath 'com.android.tools.build:gradle:7.3.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -17,6 +17,8 @@ buildscript {
 allprojects {
     repositories {
         maven { url rootProject.projectDir.getAbsolutePath() + '/libraries' }
+        maven { url 'https://jitpack.io' }
+
         google()
         jcenter()
     }
