--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,12 +17,15 @@ android {
         }
     }
     packagingOptions {
-        exclude 'META-INF/androidx.exifinterface_exifinterface.version'
+        resources {
+            excludes += ['META-INF/androidx.exifinterface_exifinterface.version']
+        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    namespace 'com.google.codelab.mlkit'
 }
 
 dependencies {
@@ -39,6 +42,9 @@ dependencies {
     // Face features
     implementation 'com.google.mlkit:face-detection:16.0.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    implementation 'com.github.dhaval2404:imagepicker:2.1'
+
 
     // Text features
     implementation 'com.google.android.gms:play-services-mlkit-text-recognition:16.0.0'
